added db; better stats; autocomplete author, title, genre

--- a/stats/css/stats.css
+++ b/stats/css/stats.css
@@ -1,3 +1,12 @@
 .hide {
   display: none;
 }
+
+/* #bookmeter_srv_grid{
+  table-layout: auto; 
+  word-wrap: break-word;
+} */
+
+.column_search {
+  width: 100%;
+}
